# osakana

./: AGENTS.md  README.md  dprint.json  package.json
.mise/: tasks.toml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
app/screen/: page.tsx
client/: package.json  pnpm-lock.yaml
client/app/: globals.css  page.tsx
client/app/_components/ui/: kanji.tsx  kanjispliter.tsx
client/app/mobile/: actions.ts  page.tsx  style.module.scss
client/app/mobile/DisplayCombo/: page.tsx
client/app/mobile/_components/: AuthGuard.tsx  DisplayCombo.tsx  InputForm.tsx  Keypad.tsx  UserRegister.tsx  combo.module.css  combo.module.scss  combo.tsx  keypad.module.scss
client/app/mobile/clear-cookie/: page.tsx  route.ts  route.tsx
client/app/mobile/register/: page.tsx
client/app/mobile/register-rank/: page.module.scss  page.tsx
client/app/mobile/register-user/: page.tsx  route.ts
client/app/mobile/request/: page.tsx  search-params.ts
client/app/ranks/: page.tsx
client/app/ranks/_components/: rank.tsx
client/app/screen/: page.tsx  types.ts
client/app/screen/styles/: Screen.module.scss
osakana-client/: package.json
osakana-server/: package.json  pnpm-lock.yaml
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  compose.yaml  data.csv
server/src/: error.rs  kanji.rs  main.rs  questions.rs  sse_event.rs  user.rs
server/src/domain/: answer.rs  mobile.rs  mod.rs  questions.rs  ranking.rs  screen.rs  user.rs
server/src/model/: mod.rs  user.rs
(+20 files in other folders)
