[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros", "ws"] }
rand = { version = "0.10.0-rc.5" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.2", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
